src/test/deca/context/invalid/logic_on_float.deca

// Description :
// Opérateur logique appliqué à des floats 
// Resultats :
// Erreur contextuelle
// opérateur && attend des boolean
//

{
  boolean b;
  b = 1.5 && 2.5;
}